--- a/templates/edit_work.html
+++ b/templates/edit_work.html
@@ -1,18 +1,20 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h3>Edit</h3>
+<h1 class="center-align">Edit</h1>
 <div class="row">
-    <form action="{{ url_for('update_work', work_id=work._id) }}" method="POST" class="col s12">
+    <div class="form-div center">
+
+    <form id="edit-form" action="{{ url_for('update_work', work_id=work._id) }}" method="POST" class="col s12">
         <div class="row">
             <div class="input-field col s12">
-                <i class="material-icons prefix">person</i>
-                <p>Author:{{ username }}</p>
+                <i class="material-icons prefix create-icons">person</i>
+                <p class="create-author">Author: <span class="create-auth-name">{{ username }}</span></p>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <i class="material-icons prefix">local_library</i>
+                <i class="material-icons prefix create-icons">local_library</i>
                 <select id="genre" name="genre" required>
                     {% for gen in genres %}
                         {% if gen.genre_name == work.genre %}
@@ -22,27 +24,27 @@
                         {% endif %}
                     {% endfor %}
                 </select>
-                <label for="genre_name">Genre</label>
+                <label class="edit-label" for="genre_name">Genre</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <i class="material-icons prefix">grade</i>
+                <i class="material-icons prefix create-icons">grade</i>
                 <input id="title" name="title" type="text" class="validate" value="{{ work.title }}" required>
-                <label for="icon_prefix">Title</label>
+                <label class="edit-label" for="icon_prefix">Title</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <i class="material-icons prefix">create</i>
+                <i class="material-icons prefix create-icons">create</i>
                 <textarea name="writing" id="writing" class="materialize-textarea" value="{{ work.writing }}" required>
                 {{- work.writing -}}
                 </textarea>
-                <label for="icon_prefix">Creation</label>
+                <label class="edit-label" for="icon_prefix">Creation</label>
             </div>
         </div>
         <div class="row">
-            <button class="btn waves-effect waves-light" type="submit" name="action">Update Work
+            <button id="update-btn" class="btn waves-effect waves-light" type="submit" name="action">Update Work
                 <i class="material-icons right">playlist_add</i>
             </button>
         </div>
