--- a/templates/works.html
+++ b/templates/works.html
@@ -1,71 +1,97 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Our Works</h1>
+<h1 class="center-align">The Works</h1>
+<h2 class="center-align">Sign Up, Read, Write & Share!</h2>
 
-<div class="row card-panel grey lighten-5">
-        <form action="{{ url_for('search') }}" method="POST" class="col s12">
+<div class="row">
+    <div id="filter-div" class="col s12 m6">
+        <form action="{{ url_for('filter_works') }}" method="POST" class="">
             <div class="row valign-wrapper center-align">
-                <div class="input-field col s12 m8">
-                    <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
-                    <input type="text" name="query" id="query" minlength="3" class="validate" required>
-                    <label for="query">Search Works</label>
+                
+                    <div class="col s12 input-field">
+                        <select id="genre-filter" name="genre_name">
+                            <option value="" disabled selected>Filter By Genre</option>
+                            {% for gen in genres %}
+                            <option value="{{gen.genre_name}}">{{gen.genre_name}}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                
+            </div>
+            <div class="row valign-wrapper center-align">
+                <div class="col s12">
+                    <a href="{{ url_for('get_works') }}" class="reset-button">Reset</a>
+                    <button type="submit" class="filter-button">
+                        <i class="fas fa-list left"></i> Filter
+                    </button>
                 </div>
-                <div class="input-field col s12 m8">
+            </div>
+        </form>
+    </div>
+
+    <div id="search-div" class="col s12 m6">
+        <form action="{{ url_for('search') }}" method="POST" class="">
+            <div class="row valign-wrapper center-align">
+                <div class="col s12 input-field">
+                    <i class="fas fa-search prefix work-search-icon"></i>
+                    <input type="text" name="query" id="query" minlength="3" class="validate" required>
+                    <label for="query">Search</label>
+                </div>
+            </div>
+            <div class="row valign-wrapper center-align">
+                <div class="col s12 input-field">
                     <select id="search-key" name="search-key">
-                        <option value="" disabled selected>Choose Category</option>
+                        <option value="" disabled selected>Category</option>
                         {% for key in keys %}
                         <option value="{{key.key_name}}">{{key.key_name}}</option>
                         {% endfor %}
                     </select>
-                    <label>Search For</label>
                 </div>
-                <div class="col s12 m4">
-                    <a href="{{ url_for('get_works') }}" class="red btn text-shadow">Reset</a>
-                    <button type="submit" class="light-blue darken-1 btn text-shadow">
+            </div>
+                
+            <div class="row valign-wrapper center-align">
+                <div class="col s12">
+                    <a href="{{ url_for('get_works') }}" class="reset-button">Reset</a>
+                    <button id="search-button" type="submit" class="">
                         <i class="fas fa-search left"></i> Search
                     </button>
                 </div>
             </div>
         </form>
     </div>
-
-
-<div class="row card-panel grey lighten-5">
-        <form action="{{ url_for('filter_works') }}" method="POST" class="col s12">
-            <div class="row valign-wrapper center-align">
-                <div class="input-field col s12 m8">
-                    <select id="genre-filter" name="genre_name">
-                        <option value="" disabled selected>Choose Genre</option>
-                        {% for gen in genres %}
-                        <option value="{{gen.genre_name}}">{{gen.genre_name}}</option>
-                        {% endfor %}
-                    </select>
-                    <label>Genre</label>
-                </div>
-                <div class="col s12 m4">
-                    <a href="{{ url_for('get_works') }}" class="red btn text-shadow">Reset</a>
-                    <button type="submit" class="light-blue darken-1 btn text-shadow">
-                        <i class="fas fa-search left"></i> Filter
-                    </button>
-                </div>
-            </div>
-        </form>
-    </div>
-<div>
-<a href="{{ url_for('add_work') }}"><i class="material-icons right">add_circle</i></a>
 </div>
 
-<div>
+
+    
+
+<a class="btn tooltipped" data-position="bottom" data-delay="50" data-tooltip="I am a tooltip">Hover me!</a>
+ 
+<div class="row center">
     {% for work in works %}
+    <div class="work-div center">
         <div class="page">
-            <p><a href="{{ url_for('view_work', work_id=work._id) }}">{{ work.title }}</a></p>
-            <p>{{ work.author }}</p>
-            <p>{{ work.genre }}</p>
-            <p>Writings:</p>
-            {% for writing in format_poetry_writing(work.writing) %}
-            <p class="format-text">{{writing}}</p>
-            {% endfor %}
+            <div class="row">
+                <div class="read-more-btn right"><a class="btn-light" href="{{ url_for('view_work', work_id=work._id) }}">Read</a></div>
+                <p class="left preview-genre">{{ work.genre }}</p>
+            </div>
+
+            <div class="scroll">
+                <div class="row">
+                    <div class="center preview-author">{{ work.author }}</div>
+                </div>
+                <div class="row">
+                    <div class="preview-title">{{ work.title }}</div>
+                </div>
+                
+                <div class="row">
+                    {% for writing in format_poetry_writing(work.writing) %}
+                    <p class="format-preview left">{{writing}}</p>
+                    {% endfor %}
+                </div>
+            </div>
+            
         </div>
+    </div>
     {% endfor %}
 </div>
 {% endblock %}
