Styled login, register, profile, favourites.html

--- a/templates/create.html
+++ b/templates/create.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1 class="center-align">Create!</h1>
+<h1 class="center-align form-heading">Create!</h1>
 <div class="center">
     <div class="row">
     <div class="form-div center">
