--- a/templates/edit_work.html
+++ b/templates/edit_work.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1 class="center-align">Edit</h1>
+<h1 class="center-align form-heading">Edit</h1>
 <div class="row">
     <div class="form-div center">
 
