--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,10 +15,15 @@
     }
 }
 
-
 body {
     background-color:rgb(245, 232, 200);
 }
+
+.card-panel{
+    margin-top: 50px;
+    background-color:rgb(238, 216, 162);
+}
+
 
 h1 {
     font-family: 'Tangerine', cursive;
@@ -30,6 +35,7 @@ h1 {
     margin-bottom: 10px;
     text-align: center;
     text-shadow: 0.5px 0.5px 2px black;
+    margin-top:0;
 }
 
 h2 {
@@ -561,6 +567,10 @@ nav .brand-logo {
 
 /*---------------------------------------------/View*/
 /*---------------------------------------------Create*/
+.form-heading{
+    margin-top: 50px;
+}
+
 .create-icons{
     color: rgba(112, 67, 25, 0.692);
 }
@@ -697,3 +707,42 @@ nav .brand-logo {
 }
 
 /*---------------------------------------------/Edit*/
+/*---------------------------------------------Profile*/
+#pro-edit-button{
+    font-size: 25px;
+    color: rgba(112, 67, 25, 0.692);
+    margin-right: 5px;
+    margin-top: 15px;
+    margin-left: 5px;
+}
+
+#pro-edit-button:hover{
+    color: rgba(121, 73, 28, 0.87);
+}
+
+#pro-del-button{
+    font-size: 25px;
+    color: rgba(112, 67, 25, 0.692);
+    margin-right: 0px;
+    margin-top: 15px;
+}
+
+#pro-del-button:hover{
+    color: rgba(121, 73, 28, 0.87);
+}
+
+/*---------------------------------------------/Profile*/
+/*---------------------------------------------Favourites*/
+
+#pro-unfav-button{
+    font-size: 25px;
+    color: rgba(20, 119, 36, 0.719);
+    margin-right: 5px;
+    margin-top: 15px;
+}
+
+#pro-unfav-button:hover{
+    color: rgba(121, 73, 28, 0.87);
+}
+
+/*---------------------------------------------/Favourites*/
