--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,7 +2,7 @@
 {% block content %}
 
     <div class="row">
-        <div class="col s12 m8 offset-m2">
+        <div class="col s12 m6 offset-m3">
             <div class="card-panel">
                 <h1 class="center-align">
                     {{ username }}'s Profile
@@ -33,22 +33,41 @@
     </div>
 </div>
 
+
+<div class="row center">
     {% for work in works %}
         {% if session["user"]|lower == work.author|lower %}
-            <div>
-                <div>
-                    <p><a href="{{ url_for('view_work', work_id=work._id) }}">{{ work.title }}</a></p>
-                    <p>{{ work.author }}</p>
-                    <p>{{ work.genre }}</p>
-                    <p>Writings:</p>
-                    {% for writing in format_poetry_writing(work.writing) %}
-                        <p>{{writing}}</p>
-                    {% endfor %}
+            <div class="work-div center">
+                <div class="page">
+                    <div class="row">
+                        <div class="read-more-btn right"><a class="btn-light" href="{{ url_for('view_work', work_id=work._id) }}">Read</a></div>
+                        <p class="left preview-genre">{{ work.genre }}</p>
+                        <a href="{{ url_for('edit_work', work_id=work._id) }}"><i id="pro-edit-button" class="material-icons center">edit</i></a>
+                        <a href="{{ url_for('delete_work', work_id=work._id) }}"><i id="pro-del-button" class="material-icons center">delete</i></a>
+                    </div>
+
+                    <div class="scroll">
+                        <div class="row">
+                            <div class="center preview-author">{{ work.author }}</div>
+                        </div>
+                        <div class="row">
+                            <div class="preview-title">{{ work.title }}</div>
+                        </div>
+                        
+                        <div class="row">
+                            {% for writing in format_poetry_writing(work.writing) %}
+                            <p class="format-preview left">{{writing}}</p>
+                            {% endfor %}
+                        </div>
+                    </div>
+                    
                 </div>
-        
-                <a href="{{ url_for('edit_work', work_id=work._id) }}"><i class="material-icons right">edit</i></a>
-                <a href="{{ url_for('delete_work', work_id=work._id) }}"><i class="material-icons right">delete</i></a>
             </div>
         {% endif %}
     {% endfor %}
+</div>
+
+
+
+
 {% endblock %}
