--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-    <h1 class="center-align">Register</h1>
+    <h1 class="center-align form-heading">Register</h1>
 
     <div class="row">
         <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
@@ -9,7 +9,7 @@
                 <!-- username -->
                 <div class="row">
                     <div class="input-field col s12">
-                        <i class="fas fa-user-plus prefix light-blue-text text-darken-4"></i>
+                        <i class="fas fa-user-plus prefix create-icons"></i>
                         <input id="username" name="username" type="text" minlength="5"
                             maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                         <label for="username">Username</label>
@@ -18,7 +18,7 @@
                 <!-- password -->
                 <div class="row">
                     <div class="input-field col s12">
-                        <i class="fas fa-lock prefix light-blue-text text-darken-4"></i>
+                        <i class="fas fa-lock prefix create-icons"></i>
                         <input id="password" name="password" type="password" minlength="5"
                             maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                         <label for="password">Password</label>
