--- a/templates/view_work.html
+++ b/templates/view_work.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1 class="center-align">View</h1>
+<h1 class="center-align form-heading">View</h1>
 
 <div class="row center">
 
