--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,34 +21,48 @@ body {
 
 .card-panel{
     margin-top: 50px;
-    background-color:rgb(238, 216, 162);
+    margin-bottom: 50px;
+    background-color:rgba(0, 0, 0, 0);
+    box-shadow: none;
 }
 
 
 h1 {
     font-family: 'Tangerine', cursive;
-    color: rgb(80, 42, 7);
+    color: #fff;
     font-size: 5rem;
     letter-spacing: 0px;
     font-weight: bolder;
     padding-bottom: 0px;
     margin-bottom: 10px;
     text-align: center;
-    text-shadow: 0.5px 0.5px 2px black;
+    text-shadow: 1px 1px 3px black;
     margin-top:0;
 }
 
 h2 {
     font-family: 'Tangerine', cursive;
-    color: rgb(80, 42, 7);
+    color: #fff;
     font-size: 2rem;
     letter-spacing: 0px;
     font-weight: bolder;
     padding-bottom: 0px;
     margin-bottom: 10px;
     text-align: center;
-    text-shadow: 0.5px 0.5px 1px black;
+    text-shadow: 0.5px 0.5px 3px black;
 }
+
+h3 {
+    font-family: 'Tangerine', cursive;
+    font-size: 2rem;
+    letter-spacing: 0px;
+    font-weight: bolder;
+    padding-bottom: 0px;
+    margin-bottom: 10px;
+    text-align: center;
+    text-shadow: 0.5px 0.5px 3px black;
+}
+
 
 .side-nav li>a{
     color: rgb(80, 42, 7);
@@ -324,6 +338,10 @@ nav .brand-logo {
     overflow-wrap: break-word;
     word-wrap: break-word;
     max-width: 40px;
+    background-color: rgba(20, 119, 36, 0.719);
+    padding: 2px;
+    color: rgb(255, 242, 210);
+    border-radius: 3px;
 }
 
 @media(min-width: 768px) {
@@ -569,6 +587,8 @@ nav .brand-logo {
 /*---------------------------------------------Create*/
 .form-heading{
     margin-top: 50px;
+    color: rgb(80, 42, 7);
+    text-shadow: 0.5px 0.5px 2px black;
 }
 
 .create-icons{
@@ -746,3 +766,38 @@ nav .brand-logo {
 }
 
 /*---------------------------------------------/Favourites*/
+
+/* Error Messages Flash */
+p.message, p.error {
+    background-color: #ffbfbfcf;
+    border-radius: 2em;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    text-align: center;
+}
+
+p.info {
+    background-color: #19c03d75;
+    border-radius: 2em;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    text-align: center;
+}
+
+/*---------------------------------------------Images*/
+#work-banner{
+    background:url(../images/pen.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: 0, -50px;
+}
+
+#profile-banner{
+    background:url(../images/bookcasebottom.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: 0, 0px;
+    margin-bottom: 30px;
+}
+
+/*---------------------------------------------/Images*/
