--- a/templates/create.html
+++ b/templates/create.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-
+<div class="container">
 <h1 class="center-align form-heading">Create!</h1>
 <div class="center">
     <div class="row">
@@ -46,7 +46,7 @@
     </div>
     </div>
 </div>
-
+</div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 {% endblock %}
