--- a/templates/edit_work.html
+++ b/templates/edit_work.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-
+<div class="container">
 <h1 class="center-align form-heading">Edit</h1>
 <div class="row">
     <div class="form-div center">
@@ -50,5 +50,5 @@
         </div>
     </form>
 </div>
-
+</div>
 {% endblock %}
