--- a/templates/favourites.html
+++ b/templates/favourites.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-
+<div class="container">
     <div class="row">
         <div class="col s12 m6 offset-m3">
             <div class="card-panel">
@@ -63,5 +63,5 @@
     {% endfor %}
 </div>
 
-
+</div>
 {% endblock %}
