--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-
+<div class="container">
     <h1 class="center-align form-heading">Register</h1>
 
     <div class="row">
@@ -42,5 +42,5 @@
             </p>
         </div>
     </div>
-
+</div>
 {% endblock %}
