--- a/templates/view_work.html
+++ b/templates/view_work.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
+<div class="container">
 <h1 class="center-align form-heading">View</h1>
 
 <div class="row center">
@@ -45,6 +46,7 @@
            
             
         </div>
-    
+    </div>
 </div>
+
 {% endblock %}
