--- a/static/css/style.css
+++ b/static/css/style.css
@@ -49,12 +49,12 @@ h2 {
     padding-bottom: 0px;
     margin-bottom: 10px;
     text-align: center;
-    text-shadow: 0.5px 0.5px 3px black;
+    text-shadow: 1px 1px 3px black;
 }
 
 h3 {
     font-family: 'Tangerine', cursive;
-    font-size: 2rem;
+    font-size: 2.5rem;
     letter-spacing: 0px;
     font-weight: bolder;
     padding-bottom: 0px;
@@ -797,6 +797,13 @@ p.info {
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: 0, 0px;
+    margin-bottom: 30px;
+}
+
+#favourite-banner{
+    background:url(../images/bookcasetop.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
     margin-bottom: 30px;
 }
 
