--- a/templates/favourites.html
+++ b/templates/favourites.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="container">
+<div id="favourite-banner" class="row work-banner">
+
     <div class="row">
         <div class="col s12 m6 offset-m3">
             <div class="card-panel">
@@ -10,7 +11,8 @@
             </div>
         </div>
     </div>
-
+</div>
+<div class="container">
 <div class="row">
     <div id="filter-div" class="col s12">
         <form action="{{ url_for('filter_favourites') }}" method="POST" class="">
@@ -32,7 +34,9 @@
         </form>
     </div>
 </div>
-
+<div class="row">
+    <h3 class="form-heading center">Liked Works:</h3>
+</div>
 <div class="row center">
     {% for work in works %}
             <div class="work-div center">
